// Generated by j5build v0.0.0-20250326003532-4b075335184f+dirty. DO NOT EDIT

syntax = "proto3";

package test.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "test/v1/greeting.j5s.proto";

service GreetingQueryService {
  option (j5.ext.v1.service).state_query.entity = "greeting";

  rpc GreetingGet(GreetingGetRequest) returns (GreetingGetResponse) {
    option (google.api.http) = {get: "/test/v1/greeting/q/{greeting_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc GreetingList(GreetingListRequest) returns (GreetingListResponse) {
    option (google.api.http) = {get: "/test/v1/greeting/q"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc GreetingEvents(GreetingEventsRequest) returns (GreetingEventsResponse) {
    option (google.api.http) = {get: "/test/v1/greeting/q/{greeting_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

service GreetingCommandService {
  option (j5.ext.v1.service).state_command.entity = "greeting";

  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/test/v1/greeting/test/v1/echo"
      body: "*"
    };
  }
}

message GreetingGetRequest {
  option (j5.ext.v1.message).object = {};

  string greeting_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message GreetingGetResponse {
  option (j5.ext.v1.message).object = {};

  test.v1.GreetingState greeting = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message GreetingListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message GreetingListResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.GreetingState greeting = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).array = {}
  ];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message GreetingEventsRequest {
  option (j5.ext.v1.message).object = {};

  string greeting_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  j5.list.v1.PageRequest page = 2 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 3 [(j5.ext.v1.field).object = {}];
}

message GreetingEventsResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.GreetingEvent events = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message HelloRequest {
  option (j5.ext.v1.message).object = {};

  // Required greeting id.
  string greeting_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {}
  ];

  // Required name of the person to greet.
  string name = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  // When not nil, the handler will throw an unhandlered error
  // prior to processing the request.
  test.v1.TestError throw_error = 3 [(j5.ext.v1.field).object = {}];

  // Passed to the request message, the call to this command
  // should succeed, but handling the resulting side-effect should
  // result in a dead letter
  test.v1.TestError worker_error = 4 [(j5.ext.v1.field).object = {}];
}

message HelloResponse {
  option (j5.ext.v1.message).object = {};

  test.v1.GreetingState greeting = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}
